--- a/package.json
+++ b/package.json
@@ -3,7 +3,17 @@
     "prisma": "^6.6.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.6.0"
+    "@apollo/server": "^4.12.0",
+    "@nestjs/apollo": "^13.1.0",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/graphql": "^13.1.0",
+    "@nestjs/mapped-types": "*",
+    "@prisma/client": "^6.6.0",
+    "connect-redis": "^8.0.3",
+    "cookie-parser": "^1.4.7",
+    "express-session": "^1.18.1",
+    "graphql": "^16.10.0",
+    "ioredis": "^5.6.1"
   },
   "scripts": {
     "db:push": "prisma db push",
